# todo-project

./: .gitignore  interactive_todo.py  pyproject.toml
.claude/agents/: inmemory-todo-developer.md
.specify/memory/: constitution.md
frontend/: verify-implementation.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/signin/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/tasks/: page.tsx
frontend/app/tasks/[id]/: page.tsx
frontend/app/tasks/[id]/edit/: page.tsx
frontend/app/tasks/new/: page.tsx
frontend/src/components/: AuthGuard.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  Navigation.tsx  SignInForm.tsx  SignUpForm.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/src/hooks/: useAuth.ts
history/prompts/001/: 001-execute-implementation-plan.console-todo-app.prompt.md
history/prompts/001-console-todo-app/: 001-console-todo-app-spec.spec.prompt.md  002-plan-console-todo-app-architecture.plan.prompt.md  003-generate-console-todo-tasks.tasks.prompt.md  004-implement-console-todo-app.green.prompt.md
history/prompts/constitution/: 001-initial-constitution-creation.constitution.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: cli-interface.md
src/: exceptions.py  main.py  todo_controller.py  todo_model.py  todo_service.py
tests/integration/: test_cli.py
tests/unit/: test_model.py
